--- a/in_progress/home_default/4_stacking.ipynb
+++ b/in_progress/home_default/4_stacking.ipynb
@@ -344,9 +344,79 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "ERROR:root:Internal Python error in the inspect module.\n",
+      "Below is the traceback from this internal error.\n",
+      "\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Traceback (most recent call last):\n",
+      "  File \"/anaconda3/lib/python3.6/site-packages/IPython/core/interactiveshell.py\", line 2862, in run_code\n",
+      "    exec(code_obj, self.user_global_ns, self.user_ns)\n",
+      "  File \"<ipython-input-14-61cbf984a9bf>\", line 8, in <module>\n",
+      "    lgbm_model.fit(train_x, train_y)\n",
+      "  File \"/anaconda3/lib/python3.6/site-packages/lightgbm/sklearn.py\", line 618, in fit\n",
+      "    callbacks=callbacks)\n",
+      "  File \"/anaconda3/lib/python3.6/site-packages/lightgbm/sklearn.py\", line 473, in fit\n",
+      "    callbacks=callbacks)\n",
+      "  File \"/anaconda3/lib/python3.6/site-packages/lightgbm/engine.py\", line 201, in train\n",
+      "    booster.update(fobj=fobj)\n",
+      "  File \"/anaconda3/lib/python3.6/site-packages/lightgbm/basic.py\", line 1521, in update\n",
+      "    ctypes.byref(is_finished)))\n",
+      "KeyboardInterrupt\n",
+      "\n",
+      "During handling of the above exception, another exception occurred:\n",
+      "\n",
+      "Traceback (most recent call last):\n",
+      "  File \"/anaconda3/lib/python3.6/site-packages/IPython/core/interactiveshell.py\", line 1806, in showtraceback\n",
+      "    stb = value._render_traceback_()\n",
+      "AttributeError: 'KeyboardInterrupt' object has no attribute '_render_traceback_'\n",
+      "\n",
+      "During handling of the above exception, another exception occurred:\n",
+      "\n",
+      "Traceback (most recent call last):\n",
+      "  File \"/anaconda3/lib/python3.6/site-packages/IPython/core/ultratb.py\", line 1090, in get_records\n",
+      "    return _fixed_getinnerframes(etb, number_of_lines_of_context, tb_offset)\n",
+      "  File \"/anaconda3/lib/python3.6/site-packages/IPython/core/ultratb.py\", line 311, in wrapped\n",
+      "    return f(*args, **kwargs)\n",
+      "  File \"/anaconda3/lib/python3.6/site-packages/IPython/core/ultratb.py\", line 345, in _fixed_getinnerframes\n",
+      "    records = fix_frame_records_filenames(inspect.getinnerframes(etb, context))\n",
+      "  File \"/anaconda3/lib/python3.6/inspect.py\", line 1480, in getinnerframes\n",
+      "    frameinfo = (tb.tb_frame,) + getframeinfo(tb, context)\n",
+      "  File \"/anaconda3/lib/python3.6/inspect.py\", line 1438, in getframeinfo\n",
+      "    filename = getsourcefile(frame) or getfile(frame)\n",
+      "  File \"/anaconda3/lib/python3.6/inspect.py\", line 693, in getsourcefile\n",
+      "    if getattr(getmodule(object, filename), '__loader__', None) is not None:\n",
+      "  File \"/anaconda3/lib/python3.6/inspect.py\", line 736, in getmodule\n",
+      "    f = getabsfile(module)\n",
+      "  File \"/anaconda3/lib/python3.6/inspect.py\", line 706, in getabsfile\n",
+      "    return os.path.normcase(os.path.abspath(_filename))\n",
+      "  File \"/anaconda3/lib/python3.6/posixpath.py\", line 376, in abspath\n",
+      "    return normpath(path)\n",
+      "  File \"/anaconda3/lib/python3.6/posixpath.py\", line 350, in normpath\n",
+      "    comps = path.split(sep)\n",
+      "KeyboardInterrupt\n"
+     ]
+    },
+    {
+     "ename": "KeyboardInterrupt",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m"
+     ]
+    }
+   ],
    "source": [
     "start = time.time()\n",
     "lgbm_model = LGBMRegressor(\n",
