id to merge bureau and bureau balance

--- a/in_progress/home_default/5_add_db.ipynb
+++ b/in_progress/home_default/5_add_db.ipynb
@@ -4,7 +4,18 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Imports"
+    "<a id=\"toc\"></a>\n",
+    "\n",
+    "# Table of Contents"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<a id=\"imports\"></a>\n",
+    "\n",
+    "# Imports"
    ]
   },
   {
@@ -32,7 +43,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Load data"
+    "<a id=\"load\"></a>\n",
+    "\n",
+    "# Load data"
    ]
   },
   {
@@ -71,16 +84,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
     "bureau = pd.read_csv(DATA_PATH + \"bureau.csv\")\n",
-    "\n",
+    "bureau_balance = pd.read_csv(DATA_PATH + \"bureau_balance.csv\")\n",
     "previous_application = pd.read_csv(DATA_PATH + \"previous_application.csv\")"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Merge bureau and bureau_balance"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -275,12 +304,30 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Split full back into train and test"
+    "### I notice NaN values sneak into full after merging"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 12,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "full = fillna_num(full)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Split full back into train and test"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
    "metadata": {
     "collapsed": true
    },
@@ -300,7 +347,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 16,
    "metadata": {
     "collapsed": true
    },
@@ -348,72 +395,10 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "ERROR:root:Internal Python error in the inspect module.\n",
-      "Below is the traceback from this internal error.\n",
-      "\n"
-     ]
-    },
-    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Traceback (most recent call last):\n",
-      "  File \"/anaconda3/lib/python3.6/site-packages/IPython/core/interactiveshell.py\", line 2862, in run_code\n",
-      "    exec(code_obj, self.user_global_ns, self.user_ns)\n",
-      "  File \"<ipython-input-14-61cbf984a9bf>\", line 8, in <module>\n",
-      "    lgbm_model.fit(train_x, train_y)\n",
-      "  File \"/anaconda3/lib/python3.6/site-packages/lightgbm/sklearn.py\", line 618, in fit\n",
-      "    callbacks=callbacks)\n",
-      "  File \"/anaconda3/lib/python3.6/site-packages/lightgbm/sklearn.py\", line 473, in fit\n",
-      "    callbacks=callbacks)\n",
-      "  File \"/anaconda3/lib/python3.6/site-packages/lightgbm/engine.py\", line 201, in train\n",
-      "    booster.update(fobj=fobj)\n",
-      "  File \"/anaconda3/lib/python3.6/site-packages/lightgbm/basic.py\", line 1521, in update\n",
-      "    ctypes.byref(is_finished)))\n",
-      "KeyboardInterrupt\n",
-      "\n",
-      "During handling of the above exception, another exception occurred:\n",
-      "\n",
-      "Traceback (most recent call last):\n",
-      "  File \"/anaconda3/lib/python3.6/site-packages/IPython/core/interactiveshell.py\", line 1806, in showtraceback\n",
-      "    stb = value._render_traceback_()\n",
-      "AttributeError: 'KeyboardInterrupt' object has no attribute '_render_traceback_'\n",
-      "\n",
-      "During handling of the above exception, another exception occurred:\n",
-      "\n",
-      "Traceback (most recent call last):\n",
-      "  File \"/anaconda3/lib/python3.6/site-packages/IPython/core/ultratb.py\", line 1090, in get_records\n",
-      "    return _fixed_getinnerframes(etb, number_of_lines_of_context, tb_offset)\n",
-      "  File \"/anaconda3/lib/python3.6/site-packages/IPython/core/ultratb.py\", line 311, in wrapped\n",
-      "    return f(*args, **kwargs)\n",
-      "  File \"/anaconda3/lib/python3.6/site-packages/IPython/core/ultratb.py\", line 345, in _fixed_getinnerframes\n",
-      "    records = fix_frame_records_filenames(inspect.getinnerframes(etb, context))\n",
-      "  File \"/anaconda3/lib/python3.6/inspect.py\", line 1480, in getinnerframes\n",
-      "    frameinfo = (tb.tb_frame,) + getframeinfo(tb, context)\n",
-      "  File \"/anaconda3/lib/python3.6/inspect.py\", line 1438, in getframeinfo\n",
-      "    filename = getsourcefile(frame) or getfile(frame)\n",
-      "  File \"/anaconda3/lib/python3.6/inspect.py\", line 693, in getsourcefile\n",
-      "    if getattr(getmodule(object, filename), '__loader__', None) is not None:\n",
-      "  File \"/anaconda3/lib/python3.6/inspect.py\", line 736, in getmodule\n",
-      "    f = getabsfile(module)\n",
-      "  File \"/anaconda3/lib/python3.6/inspect.py\", line 706, in getabsfile\n",
-      "    return os.path.normcase(os.path.abspath(_filename))\n",
-      "  File \"/anaconda3/lib/python3.6/posixpath.py\", line 376, in abspath\n",
-      "    return normpath(path)\n",
-      "  File \"/anaconda3/lib/python3.6/posixpath.py\", line 350, in normpath\n",
-      "    comps = path.split(sep)\n",
-      "KeyboardInterrupt\n"
-     ]
-    },
-    {
-     "ename": "KeyboardInterrupt",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m"
+      "Training took 933 seconds\n"
      ]
     }
    ],
@@ -456,6 +441,10 @@
    "source": [
     "## Linear Regressor\n",
     "\n",
+    "(Training takes 11 seconds)\n",
+    "\n",
+    "(Scoring takes 13 seconds)\n",
+    "\n",
     "(open Markdown for notes on [Linear Regression](http://scikit-learn.org/stable/modules/generated/sklearn.linear_model.LinearRegression.html) and parameter search attempts)\n",
     "\n",
     "<div hidden>\n",
@@ -472,11 +461,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Training took 11 seconds\n"
+     ]
+    }
+   ],
    "source": [
     "lin_model = LinearRegression()\n",
     "\n",
@@ -494,18 +489,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[ 0.26508292  0.26264828]\n",
+      "[ 0.26405879  0.26177634]\n",
       "\n",
-      "0.263865596742\n",
+      "0.262917561689\n",
       "\n",
-      "Scoring took 7 seconds\n"
+      "Scoring took 13 seconds\n"
      ]
     }
    ],
@@ -573,6 +568,10 @@
    "source": [
     "## Logistic Regression\n",
     "\n",
+    "(Training takes 79 seconds)\n",
+    "\n",
+    "(Scoring takes 103 seconds)\n",
+    "\n",
     "(open Markdown for notes on [Logistic Regression](http://scikit-learn.org/stable/modules/generated/sklearn.linear_model.LogisticRegression.html) and parameter search attempts)\n",
     "\n",
     "<div hidden>\n",
@@ -599,14 +598,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Training took 15 seconds\n"
+      "Training took 79 seconds\n"
      ]
     }
    ],
@@ -627,18 +626,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[ 0.28561741  0.2826656 ]\n",
+      "[ 0.28578814  0.2826771 ]\n",
       "\n",
-      "0.2841415038\n",
+      "0.284232621896\n",
       "\n",
-      "Scoring took 18 seconds\n"
+      "Scoring took 103 seconds\n"
      ]
     }
    ],
@@ -653,6 +652,10 @@
    "metadata": {},
    "source": [
     "## Lasso Regression\n",
+    "\n",
+    "(Training takes 71 seconds)\n",
+    "\n",
+    "(Scoring takes 72 seconds)\n",
     "\n",
     "(open Markdown for notes on [Lasso](http://scikit-learn.org/stable/modules/generated/sklearn.linear_model.Lasso.html) and parameter search attempts)\n",
     "\n",
@@ -677,14 +680,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Training took 68 seconds\n"
+      "Training took 71 seconds\n"
      ]
     }
    ],
@@ -705,18 +708,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[ 0.27209767  0.26929769]\n",
+      "[ 0.27082038  0.26825154]\n",
       "\n",
-      "0.270697679661\n",
+      "0.269535959388\n",
       "\n",
-      "Scoring took 53 seconds\n"
+      "Scoring took 72 seconds\n"
      ]
     }
    ],
@@ -731,6 +734,10 @@
    "metadata": {},
    "source": [
     "## Ridge Regression\n",
+    "\n",
+    "(Training takes 5 seconds)\n",
+    "\n",
+    "(Scoring takes 5 seconds)\n",
     "\n",
     "\n",
     "(open Markdown for notes on [Ridge](http://scikit-learn.org/stable/modules/generated/sklearn.linear_model.Ridge.html) and parameter search attempts)\n",
@@ -753,14 +760,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Training took 3 seconds\n"
+      "Training took 5 seconds\n"
      ]
     }
    ],
@@ -781,18 +788,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[ 0.26507705  0.26264958]\n",
+      "[ 0.26401601  0.26171901]\n",
       "\n",
-      "0.263863313366\n",
+      "0.262867506665\n",
       "\n",
-      "Scoring took 3 seconds\n"
+      "Scoring took 5 seconds\n"
      ]
     }
    ],
@@ -806,7 +813,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## XGB Regressor"
+    "## XGB Regressor\n",
+    "\n",
+    "(Training takes 544 seconds)\n",
+    "\n",
+    "(Scoring takes 453 seconds)"
    ]
   },
   {
@@ -815,14 +826,10 @@
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'score_model' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-25-346a3bb06387>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0mxgb_model\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mXGBRegressor\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0mxgb_model\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfit\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtrain_x\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtrain_y\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m \u001b[0mscore_model\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mxgb_model\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m: name 'score_model' is not defined"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Training took 544 seconds\n"
      ]
     }
    ],
@@ -838,9 +845,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Scoring\n",
-    "\n",
-    "Scoring takes 349 seconds for me"
+    "### Scoring"
    ]
   },
   {
@@ -852,11 +857,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[ 0.26315737  0.26094917]\n",
+      "[ 0.2627855   0.25995348]\n",
       "\n",
-      "0.262053265711\n",
+      "0.261369490288\n",
       "\n",
-      "Scoring took 349 seconds\n"
+      "Scoring took 453 seconds\n"
      ]
     }
    ],
@@ -881,7 +886,31 @@
    },
    "outputs": [],
    "source": [
-    "predictions = xgb_model.predict(test_x)"
+    "# lgbm_pred = lgbm_model.predict(test_x)\n",
+    "lin_pred  = lin_model.predict(test_x)\n",
+    "# rf_pred   = rf_model.predict(test_x)\n",
+    "log_pred  = log_model.predict(test_x)\n",
+    "las_pred  = las_model.predict(test_x)\n",
+    "rid_pred  = rid_model.predict(test_x)\n",
+    "xgb_pred  = xgb_model.predict(test_x)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Final predictions"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "final_pred = 0.2 * lin_pred + 0.1*log_pred + 0.15*las_pred + 0.25*rid_pred + 0.3*xgb_pred"
    ]
   },
   {
@@ -893,7 +922,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -902,16 +931,16 @@
        "False"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "predictions = np.clip(predictions, 0, 1)\n",
+    "final_pred = np.clip(final_pred, 0, 1)\n",
     "\n",
     "# Sanity check\n",
-    "any(predictions < 0) or any(predictions > 1)"
+    "any(final_pred < 0) or any(final_pred > 1)"
    ]
   },
   {
@@ -923,7 +952,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 32,
    "metadata": {
     "collapsed": true
    },
@@ -931,8 +960,8 @@
    "source": [
     "pd.DataFrame({\n",
     "    \"SK_ID_CURR\": test_id,\n",
-    "    \"TARGET\": predictions\n",
-    "}).to_csv(\"../../submissions/xgb.csv\", index=False)"
+    "    \"TARGET\": final_pred\n",
+    "}).to_csv(\"../../submissions/stacked.csv\", index=False)"
    ]
   },
   {
